updated index title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" /> 
     <title>
-        FIFA World Cup 201
+        Github Training - Fifa World Cup
     </title>
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link rel="stylesheet" type="text/css" href="rps.css" />
